--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "@mantine/hooks": "^6.0.19",
     "@mantine/notifications": "^6.0.19",
     "@tabler/icons-react": "^2.32.0",
+    "chart.js": "^4.4.8",
     "dayjs": "^1.11.9",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
   },
